--- a/google.html
+++ b/google.html
@@ -7,6 +7,46 @@
     <link rel="stylesheet" href="google.css">
 </head>
 <body>
-    
+    <header>
+        <nav class="main-nav">
+            <ul id="list1-left">
+                <li>About</li>
+                <li>Store</li>
+            <ul id="list1-rigth">
+                <li>Gmail</li>
+                <li>Images</li>
+                <li><img src="./images/icon-menu.jpg" alt=""></li>
+                <li>Sign In</li>
+            </ul>
+        </nav>
+
+    </header>
+    <section class="google-logo">   
+        <label for="google"><img src="./images/googlelogo.png" alt=""></label>
+        <input id="google" type="text"> 
+    </section>
+    <section>
+        <ul id="id1">
+            <li>Google Search</li>
+            <li>I'm Feeling Lucky</li>
+        </ul>
+        <p>Ohter language you can use Google <span id="span1" >English</span> </p>
+    </section>
+
+    <footer>
+        <p>Turkey</p>
+        <ul id="list2-left">
+            <li>Advertising</li>
+            <li>Business</li>
+            <li>How Search Works</li>
+        </ul>
+        <ul id="list2-rigth">
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>Setting</li>
+        </ul>
+    </footer>
+        
+
 </body>
 </html>
